Fix about us section spacing

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -41,7 +41,7 @@ section.module.content {
 }
 
 .team-member {
-  margin-bottom: 10%
+  margin-bottom: 25px
 }
 
 .team-member img {
